--- a/wheater app.html
+++ b/wheater app.html
@@ -12,18 +12,21 @@
     font-family: sans-serif;
 }
 body{
-    background-image: url(https://cdn.zeebiz.com/sites/default/files/2023/05/23/243689-jharkhand-weather-toda.jpg);
+    background-image: url('https://thumbs.dreamstime.com/b/weather-forecast-concept-collage-variety-conditions-climate-change-background-sky-image-bright-sun-blue-dark-stormy-149924291.jpg');
     /* background-color:rgb(82, 145, 145); */
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .container{
-    background-color: #cc92da;
+    background-color: #479dcb;
+    /* background-image: url('https://th.bing.com/th/id/OIP.NOH8bBZLrC_5WpwupOJNkwHaEX?rs=1&pid=ImgDetMain'); */
     max-width: 600px;
     text-align: center;
     padding: 20px;
     box-shadow: 10px 10px 20px rgba(0,0,0, 0.6);
     margin: 20px auto;
-    margin-top: 40px;
-    border-radius: 5px;
+    margin-top: 150px;
+    border-radius: 7px;
 }
 form{
     display: flex;
@@ -42,7 +45,7 @@ form input[type="text"]{
 form input[type="submit"]{
     padding: 10px 20px;
     border: none;
-    background-color: #c0645a;
+    background-color: #2b33a4;
     color: white;
     font-size: 18px;
     border-radius: 5px;
